<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="shoeStoreViewModel"
            type="com.udacity.shoestore.ShoeStoreViewModel" />

        <variable
            name="shoe"
            type="com.udacity.shoestore.models.Shoe" />
    </data>
<FrameLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".detail.ShoeDetail">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="@dimen/default_padding">

        <TextView
            android:id="@+id/text_shoe_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_shoe_label"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/text_shoe_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/text_shoe_name"
            android:inputType="textPersonName"
            android:text="@={shoe.name}"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/text_shoe_label" />

        <EditText
            android:id="@+id/text_shoe_company"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/text_shoe_company"
            android:text="@={shoe.company}"
            android:inputType="textPersonName"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/text_shoe_name" />

        <EditText
            android:id="@+id/text_shoe_size"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/text_shoe_size"
            android:text='@={shoe.size}'
            android:inputType="textPersonName"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/text_shoe_company" />

        <EditText
            android:id="@+id/text_shoe_description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/text_description"
            android:text="@={shoe.description}"
            android:inputType="textPersonName"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/text_shoe_size" />

        <Button
            android:id="@+id/button_cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_cancel"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/text_shoe_description" />

        <Button
            android:id="@+id/button_save"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_save"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/button_cancel" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>
</layout>