<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/shoe_navigation"
    app:startDestination="@id/login">
    <fragment
        android:id="@+id/instruction"
        android:name="com.udacity.shoestore.onboarding.Instruction"
        android:label="@string/label_instruction"
        tools:layout="@layout/fragment_instruction">
        <action
            android:id="@+id/action_instruction_to_shoeList2"
            app:destination="@id/shoe_list"
            app:popUpToInclusive="false" />
    </fragment>
    <fragment
        android:id="@+id/login"
        android:name="com.udacity.shoestore.login.Login"
        android:label="@string/label_login"
        tools:layout="@layout/fragment_login">
        <action
            android:id="@+id/action_login_to_welcome"
            app:destination="@id/welcome" />
    </fragment>
    <fragment
        android:id="@+id/shoe_list"
        android:name="com.udacity.shoestore.listing.ShoeList"
        android:label="@string/label_shoe_list"
        tools:layout="@layout/fragment_shoe_list" >
        <action
            android:id="@+id/action_shoe_list_to_shoeDetail"
            app:destination="@id/shoe_detail" />
        <action
            android:id="@+id/action_shoe_list_to_login"
            app:destination="@id/login"
            app:launchSingleTop="true"
            app:popUpTo="@id/instruction"
            app:popUpToInclusive="true" />
    </fragment>
    <fragment
        android:id="@+id/welcome"
        android:name="com.udacity.shoestore.onboarding.Welcome"
        android:label="@string/label_welcome"
        tools:layout="@layout/fragment_welcome">
        <action
            android:id="@+id/action_welcome_to_instruction2"
            app:destination="@id/instruction"
            app:popUpTo="@id/login"
            app:popUpToInclusive="true" />
    </fragment>
    <fragment
        android:id="@+id/shoe_detail"
        android:name="com.udacity.shoestore.detail.ShoeDetail"
        android:label="@string/label_shoe_detail">
        <action
            android:id="@+id/action_shoeDetail_to_shoe_list"
            app:destination="@id/shoe_list"
            app:popUpTo="@id/shoe_list"
            app:popUpToInclusive="true" />
    </fragment>
</navigation>